[package]
name = "fricgan"
version = "0.0.1"
authors = ["A.W. 'aws' Stanley <aws@reversing.space>"]
description = "A simple crate for performing basic input and output on bytes."
repository = "https://github.com/awsatnley/fricgan"
readme = "README.md"
categories = ["data-structures","no-std"]
license = "MIT OR Apache-2.0"

[dependencies.num-traits]
version = "0.2"
default-features = false
optional = true

[features]
default = [
    "io-i8",
    "io-i16",
    "io-i32",
    "io-i64",

    "io-u8",
    "io-u16",
    "io-u32",
    "io-u64",

    "vlq",
    "vlq-32",
    "vlq-64",

    "safety-checks",
]

# Safety
safety-checks = []

std = []

# i8 (single signed byte) read/write.
io-i8 = []

# u16 (two signed bytes) read/write.
io-i16 = []

# u32 (four signed bytes) read/write.
io-i32 = []

# u64 (eight signed bytes) read/write.
io-i64 = []

# u8 (single unsigned byte) read/write.
io-u8 = []

# u16 (two unsigned bytes) read/write.
io-u16 = []

# u32 (four unsigned bytes) read/write.
io-u32 = []

# u64 (eight unsigned bytes) read/write.
io-u64 = []

# u8 length with a string that follows.
io-string = ["std", "num-traits", "num-traits/std"]

# vlq support
vlq = []

# 7 bits of value, per byte;
# 1 bit marking continuation.
# Maximum size 35 bits (32 bits actual)
vlq-32 = ["vlq"]

# 7 bits of value, per byte;
# 1 bit marking continuation
# Maximum size 71 bits (64 bits actual)
vlq-64 = ["vlq"]

# vlq length with a string that follows.
# The null byte is not counted as part of the length.
vlq-string = ["std", "vlq", "num-traits", "num-traits/std"]

[dev-dependencies]
tempdir = "0.3"

[package.metadata.docs.rs]
all-features = true